# 4W-Autonomous-Mobile-Robot-using-SLAM-LiDAR-X2-DDSM210-Smart-Motors

./: .gitignore  README.md
ddsm_nav_driver/: package.xml  setup.cfg  setup.py
ddsm_nav_driver/config/: ekf.yaml  mapper_params_online_async.yaml
ddsm_nav_driver/ddsm_nav_driver/: ddsm_base.py  ddsm_joy.py  ddsm_teleop.py  odom_covariance.py  odom_publisher.py
firmware/esp32_motor_controller/: README.md  motor_controller.ino
images/: slam_map.pgm
imu_driver/: package.xml  setup.py  test_mpu6500.py
imu_driver/imu_driver/: calibration.py  imu_node.py  mpu6500.py
turtlebot_localization/: package.xml  setup.cfg  setup.py
turtlebot_localization/config/: ekf.yaml
turtlebot_localization/launch/: ekf.launch.py
