<?xml version="1.0"?>
<package format="3">

  <name>imu_driver</name>
  <version>0.0.1</version>

  <description>
    ROS 2 driver for the MPU6500 IMU connected over I2C.
  </description>

  <maintainer email="robotics@example.com">robotics</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
